[tool.poetry]
name = "repl_python3_manim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
screeninfo = "^0.8"
moderngl = "^5.6.4"
moderngl-window = "^2.4.1"
skia-pathops = "^0.7.2"
tqdm = "^4.62.3"
colour = "^0.1.5"
ipython = "^8.0.1"
pyglet = "^1.5.21"
tinycss2 = "^1.1.1"
cssselect2 = "^0.4.1"
validators = "^0.18.2"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
